termine de implementar BEM y modifice @media 320

--- a/index.html
+++ b/index.html
@@ -23,16 +23,14 @@
     <p class="body__p">SpecialTravel Tu Mejor Opcion Para Vivir Tu Sueño...</p>
 </div>
 <!--------NavBar------->
-<navbar class="header-bs" >
+<navbar class="navbar" >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">SpecialTravel</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                         <a class="nav-link " aria-current="page" href="./vistas/actividades.html">Actividades</a>
@@ -53,7 +51,6 @@
                             </ul>
                         </li>
                     </ul>
-
                 </div>
 
             </div>
@@ -112,6 +109,8 @@
 </html>
 
 <!-- "METODOLOGIA BEM"
+.navbar
+
 .body
 .body__info
 .body__p
