--- a/vistas/contactos.html
+++ b/vistas/contactos.html
@@ -23,7 +23,7 @@
     <p class="body__p">SpecialTravel la Mejor Opcion Para Vivir Tu Sueño</p>
 </div>
 <!--------NavBar------->
-<navbar class="header-bs" >
+<navbar class="navbar" >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
             <div class="container-fluid">
