--- a/vistas/alojamientoytraslado.html
+++ b/vistas/alojamientoytraslado.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
     <!--AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!--Font-->
@@ -23,7 +24,7 @@
 <body> 
 <!------publicidad----->
 <div class="body__info">
-    <p class="body__p">SpecialTravel la Mejor Opcion Para Vivir Tu Sueño</p>
+    <p class="body__p slide-in-blurred-right">SpecialTravel la Mejor Opcion Para Vivir Tu Sueño</p>
 </div>
 <!------NavBar----->
 <navbar class="navbar" >
@@ -71,55 +72,55 @@
 <main class="main__aloja">
 <!--seccion-aloja-->
 <section class="section-aloja">
-    <div class="section-aloja__titulos">
+    <div class="section-aloja__titulos "data-aos="zoom-in-left">
             <h2>Hoteles y Alojamientos</h2>
             <div class="line"></div>
     </div>
 <!-------seccion-banner------>
     <div class="section-aloja__banner1">
-        <div class=banner__info>
-            <h2 class="banner__subtitulo">Live Your Dreams</h2>
+        <div class=banner__info >
+            <h2 class="banner__subtitulo tracking-in-contract">Live Your Dreams</h2>
             <div class="line"></div>
-            <h1 class="banner__titulo">Welcome To SpecialTravel</h1>
+            <h1 class="banner__titulo tracking-in-contract">Welcome To SpecialTravel</h1>
             <a class="btn__l" href="#">Learn More</a>
         </div>
     </div>
 <!-------seccion-gallery------>
     <div class="section-aloja__gallery">
-        <div class="section-aloja__gallery-item">
-                        <img src="../img/hotel1.jpg" alt="hoteles" class="section-aloja__gallery-img">
+        <div class="section-aloja__gallery-item"data-aos="zoom-out-right">
+                        <img src="../img/hotel1.jpg" alt="hoteles1" class="section-aloja__gallery-img">
                         <h2 class="section-aloja__gallery-title">Reservalo $14.50 </h2>
         </div>
-        <div class="section-aloja__gallery-item">
-                        <img src="../img/hotel2.jpg" alt="hoteles" class="section-aloja__gallery-img">
+        <div class="section-aloja__gallery-item"data-aos="flip-up">
+                        <img src="../img/hotel2.jpg" alt="hoteles2" class="section-aloja__gallery-img">
                         <h2 class="section-aloja__gallery-title">Reservalo $59.63 </h2>
         </div>
-        <div class="section-aloja__gallery-item">
-                        <img src="../img/hotel3.jpg" alt="hoteles" class="section-aloja__gallery-img">
+        <div class="section-aloja__gallery-item"data-aos="zoom-out-left">
+                        <img src="../img/hotel3.jpg" alt="hoteles3" class="section-aloja__gallery-img">
                         <h2 class="section-aloja__gallery-title">Reservalo $78.24 </h2>
         </div>
-        <div class="section-aloja__gallery-item">
-                        <img src="../img/hotel4.jpg" alt="hoteles" class="section-aloja__gallery-img">
+        <div class="section-aloja__gallery-item"data-aos="flip-left">
+                        <img src="../img/hotel4.jpg" alt="hoteles4" class="section-aloja__gallery-img">
                         <h2 class="section-aloja__gallery-title">Reservalo $35.47</h2>
         </div>
-        <div class="section-aloja__gallery-item">
-                        <img src="../img/hotel5.jpg" alt="hoteles" class="section-aloja__gallery-img">
+        <div class="section-aloja__gallery-item"data-aos="flip-down">
+                        <img src="../img/hotel5.jpg" alt="hoteles5" class="section-aloja__gallery-img">
                         <h2 class="section-aloja__gallery-title">Reservalo $65.00 </h2>
         </div>
-        <div class="section-aloja__gallery-item">
-                        <img src="../img/hotel7.jpg" alt="hoteles" class="section-aloja__gallery-img">
+        <div class="section-aloja__gallery-item"data-aos="zoom-out-right">
+                        <img src="../img/hotel7.jpg" alt="hoteles7" class="section-aloja__gallery-img">
                         <h2 class="section-aloja__gallery-title">Reservalo $200</h2>
         </div>
-        <div class="section-aloja__gallery-item">
-                        <img src="../img/hotel8.jpg" alt="hoteles" class="section-aloja__gallery-img">
+        <div class="section-aloja__gallery-item"data-aos="flip-down">
+                        <img src="../img/hotel8.jpg" alt="hoteles8" class="section-aloja__gallery-img">
                         <h2 class="section-aloja__gallery-title">Reservalo $145.45</h2>
         </div>
-        <div class="section-aloja__gallery-item">
-                        <img src="../img/hotel9.jpg" alt="hoteles" class="section-aloja__gallery-img">
+        <div class="section-aloja__gallery-item"data-aos="zoom-out-left">
+                        <img src="../img/hotel9.jpg" alt="hoteles9" class="section-aloja__gallery-img">
                         <h2 class="section-aloja__gallery-title">Reservalo $99.45</h2>
         </div>
-        <div class="section-aloja__gallery-item">
-                        <img src="../img/hotel6.jpg" alt="hoteles" class="section-aloja__gallery-img">
+        <div class="section-aloja__gallery-item"data-aos="flip-right">
+                        <img src="../img/hotel6.jpg" alt="hoteles16" class="section-aloja__gallery-img">
                         <h2 class="section-aloja__gallery-title">Reservalo $98.58</h2>
         </div>
     </div>
@@ -142,6 +143,7 @@
         <p class="footer__p">SpecialTravel 2022-2023 | Diseñado por JDAVILA - Todos los derechos reservados.</p>
     </div>
 </footer>
+<!------Script AOS------>
 <script> AOS.init();</script>
 <!------Script JS------->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
