--- a/vistas/contactos.html
+++ b/vistas/contactos.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    
+    <!--AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&family=Raleway:wght@100;400&display=swap" rel="stylesheet">
@@ -19,8 +23,8 @@
 
 <body>
 <!------publicidad----->
-<div class="body__info">
-    <p class="body__p">SpecialTravel la Mejor Opcion Para Vivir Tu Sueño</p>
+<div class="body__info">  
+    <p class="body__p slide-in-blurred-right">SpecialTravel Tu Mejor Opcion Para Vivir Tus Sueños...</p>
 </div>
 <!--------NavBar------->
 <navbar class="navbar" >
@@ -69,7 +73,7 @@
 <!--seccion-contactos-->
 <section class="section-contactos">
     <div class="section-contactos__titulos">
-            <h1 class="section-contactos__h1">Para comunicarse con nosotros por favor utilice nuestros canales de informacion!!!</h1>
+            <h1 class="section-contactos__h1 focus-in-contract "> Comunicate Con Nosotros </h1>
             <div class="line"></div>
     </div>
 <!-------seccion-Form------>
@@ -139,6 +143,9 @@
         <p class="footer__p">SpecialTravel 2022-2023 | Diseñado por JDAVILA - Todos los derechos reservados.</p>
     </div>
 </footer>
+
+<!------Script AOS------>
+<script> AOS.init();</script>
 <!------Script JS------->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
