cambios varios fuente/espacios etc..

--- a/vistas/actividades.html
+++ b/vistas/actividades.html
@@ -130,7 +130,7 @@
 
 <!------seccion-resort------>
     <article  class="section-actividades__resort">
-        <div class="section-actividades__titulos focus-in-contract ">
+        <div class="section-actividades__titulos "data-aos="fade-down">
             <h2>Resort</h2>
             <div class="line"></div>
         </div>
@@ -179,12 +179,12 @@
 
 <!---seccion-excursiones----->
     <article class="section-actividades__excursiones">
-        <div class="section-actividades__titulos focus-in-contract ">
+        <div class="section-actividades__titulos "data-aos="fade-down">
             <h2>Excursiones al aire libre</h2>
             <div class="line"></div>
         </div>
         <div>
-            <p class="contenedor__p">Como en cualquier deporte, practicando senderismo nos ponemos en forma, y al no ser un deporte de altas exigencias, en cada excursión nos podemos ir marcando unas metas que harán que vaya mejorando nuestro estado físico, nuestra resistencia y nuestra capacidad pulmonar. Al ser un deporte aeróbico en el que se activa la circulación, es un ejercicio ideal para prevenir enfermedades cardíacas, y para disminuir la tensión arterial. Además, ayuda a mejorar los niveles de colesterol y la diabetes.</p>
+            <p class="contenedor__p">Como en cualquier deporte, practicando senderismo nos ponemos en forma, y al no ser un deporte de altas exigencias, se activa la circulación y es un ejercicio ideal para prevenir enfermedades cardíacas, y para disminuir la tensión arterial.</p>
         </div>
 <!-------seccion-banner------>
         <div class="section-actividades__excursiones-banner1 tracking-in-contract">
