--- a/vistas/vuelos.html
+++ b/vistas/vuelos.html
@@ -84,7 +84,7 @@
                 <img src="../img/amsterdan.jpg" class="card-img-top" alt="Amsterdan">
                 <div class="card-body">
                     <h5 class="card-title">Amsterdan</h5>
-                    <p class="card-text">Para un relax sin igual, nada como una visita al spa, que ofrece masajes. Aprovecha las instalaciones recreativas, que incluyen una piscina cubierta, un sauna y una sala de fitness.</p>
+                    <p class="card-text">Para un relax sin igual, nada como una visita al spa, que ofrece masajes. Aprovecha las instalaciones recreativas, que incluyen una piscina cubierta.</p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">wifi gratuito</li>
@@ -100,7 +100,7 @@
                 <img src="../img/paris.jpg" class="card-img-top" alt="paris">
                 <div class="card-body">
                     <h5 class="card-title">Paris</h5>
-                    <p class="card-text">te sentirás como nuevo gracias a los masajes. Tienes además una terraza en la azotea donde sentarte a contemplar el paisaje. Otros servicios de este hotel incluyen servicio de cuidado de niños con cargo</p>
+                    <p class="card-text"> Tienes además una terraza en la azotea donde sentarte a contemplar el paisaje. Otros servicios de este hotel incluyen servicio de cuidado de niños.</p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">wifi gratuito</li>
@@ -116,7 +116,7 @@
                 <img src="../img/singapure.jpg" class="card-img-top" alt="Singapure">
                 <div class="card-body">
                     <h5 class="card-title">Singapure</h5>
-                    <p class="card-text">Prueba las especialidades de cocina asiática en LIME, restaurante con un bar. O, cuando quieras seguir descansando, llama al servicio a la habitación disponible las 24 horas. Y para darle el punto final a tu día de la mejor forma, tómate un refrescante cocktail en el bar junto a la piscina.</p>
+                    <p class="card-text">Prueba las especialidades de cocina asiática en LIME, restaurante con un bar y cuando quieras seguir descansando, llama al servicio a la habitación disponible las 24 horas.</p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">wifi gratuito</li>
