cambios al diseño del form / vuelos

--- a/vistas/vuelos.html
+++ b/vistas/vuelos.html
@@ -185,7 +185,6 @@
                     <input type='date'  name="date" id="date" required>
                 </table>
                 <br>
-                <button type="submit" class="btn__l" input type="submit" value="Reservar ">Reservar</button>
             </div>
             <div class="section-vuelos__titulos"data-aos="fade-down">
                 <h5>Destinos Disponibles</h5>
@@ -204,16 +203,13 @@
                     <option value="Londres">Londres</option>
                     <option value="otros">Otros..</option>
                 </select>
-                <button type="submit" class="btn__l" input type="submit" value="Seleccionar ">Seleccionar</button>
-                <button type="reset" class="btn__l"  value="Pasajeros">Pasajeros</button>
-            <br>
             <div class="section-vuelos__titulos"data-aos="fade-down">
                 <h5>Metodo de pago</h5>
                 <div class="line"></div>
             </div>
                 <label for="Metodo de pago"></label>
                 <select name="Metodo de pago" id="Metododepago">
-                    <option value="#"></option>
+                    <option value="#">Metodos</option>
                     <option value="Mercado Pago">Mercado Pago</option>
                     <option value="Debito">Debito</option>
                     <option value="Credito">Credito</option>
@@ -221,6 +217,7 @@
                     <option value="otros">Otros..</option>
                 </select>
                 <button type="submit" class="btn__l" input type="submit" value="Comprar ">Viajar</button>
+                <button type="submit" class="btn__l" input type="submit" value="Reservar ">Reservar</button>
                 <button type="reset" class="btn__l"  value="Limpiar formulario">Limpiar</button>
             <br>
         </form>
@@ -274,5 +271,6 @@ data-aos="fade-down".section-vuelos__banner1
 .section-vuelos__gallery-title
 .section-vuelos__gallery-img
 .section-vuelos__form
+.form.section-vuelos__form
 .section-vuelos__videos
 -->
