implementando el seo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Comencé SpecialTravel en 2022 con el objetivo de inspirar a otros a viajar de una manera emocionante y significativa. Me gusta pensar en mí mismo como un explorador, trazando el camino para mis lectores.">
+    <meta name="keywords" content="travel, special, Dreams, Eventos, Senderismo, experiencia, naturaleza, actividades, placentero, aire, fresco, fogata, Camping, beneficios, cuerpo, salud">
+    
     <!--bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
