--- a/vistas/actividades.html
+++ b/vistas/actividades.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description" content="La recreación favorece el desarrollo de diferentes destrezas motoras. El interactuar con el entorno y jugar activamente, por eso en SpecialTravel lo importante es la diversion">
+    <meta name="keywords" content="Actividades, deportes, paseos, resort, Live, libre, ejercicio, excursionismo">
+
+
     <!--bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
