--- a/vistas/alojamientoytraslado.html
+++ b/vistas/alojamientoytraslado.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Descubrí hoteles en oferta en los mejores destinos para tu viaje. Contamos con hospedajes y alojamientos baratos, Compará precios de hoteles y encontrá ofertas ideales ahorrando tiempo y dinero en SpecialTravel.com">
+    <meta name="keywords" content="Alojamiento, Traslado, Hoteles, paquetes, equipaje, Vacaciones, diversion, cuotas, pasaportes">
+
     <!--bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
