--- a/vistas/vuelos.html
+++ b/vistas/vuelos.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="¿Buscás las Mejores Ofertas para tu Viaje? Vacaciones 2023. ¿Querés Viajar al Mejor Destino en el Mejor Vuelo y Hotel? Tenemos el Precio Más Bajo. Descuentos en SpecialTravel.com">
+    <meta name="keywords" content="Vuelos, Destinos, Viajes, Welcome, relax, Ofertas, paisaje, descansando, Ofertas, fly, turismo, aventuras, reservas, aeropuerto, boletos, descuentos">
+    
     <!--bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
