--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="./vistas/actividades.html">Actividades</a>
+                        <a class="nav-link " aria-current="page" href="./descubre/actividades.html">Actividades</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="./vistas/alojamientoytraslado.html">Alojamiento/traslado</a>
+                        <a class="nav-link" href="./descubre/alojamientoytraslado.html">Alojamiento/traslado</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="./vistas/vuelos.html">Vuelos</a>
+                        <a class="nav-link" href="./descubre/vuelos.html">Vuelos</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item"href="./vistas/contactos.html">Contactos</a></li>
+                                <li><a class="dropdown-item" href="./descubre/contactos.html">Contactos</a></li>
                                 <li><a class="dropdown-item" href="#">Reservas</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Plan de vuelos</a></li>
