IMPLEMENTACION DE LOS PARTIALS

--- a/descubre/actividades.html
+++ b/descubre/actividades.html
@@ -21,8 +21,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&family=Raleway:wght@100;400&display=swap" rel="stylesheet">
 
     <!--estilo CSS-->
-    <link rel="stylesheet" type="text/css" href="../css/estilo.css">
     <link rel="shortcut icon" type="" href="../img/logosolapa.jpg">
+    <!--<link rel="stylesheet" href="./css/estilo.css">-->
+    <link rel="stylesheet" href="../css/compilado.css">
     <title>Actividades</title>  
 </head>
 
