--- a/descubre/alojamientoytraslado.html
+++ b/descubre/alojamientoytraslado.html
@@ -21,7 +21,8 @@
 
     <!--estilo CSS-->
     <link rel="shortcut icon" type="" href="../img/logosolapa.jpg">
-    <link rel="stylesheet" type="text/css" href="../css/estilo.css">
+    <!--<link rel="stylesheet" href="./css/estilo.css">-->
+    <link rel="stylesheet" href="../css/compilado.css">
     <title>Alojamiento/Traslado</title>  
 </head>
 
