--- a/descubre/contactos.html
+++ b/descubre/contactos.html
@@ -71,13 +71,13 @@
             </div>
         </nav>
 </navbar>
-<!---Cont/Principal--->
+
 <main class="main__contactos">
 <!--seccion-contactos-->
 <section class="section-contactos">
     <div class="section-contactos__titulos">
-            <h1 class="section-contactos__h1 focus-in-contract "> Comunicate Con Nosotros </h1>
-            <div class="line"></div>
+        <h1 class="section-contactos__h1 focus-in-contract "> Comunicate Con Nosotros </h1>
+        <div class="line"></div>
     </div>
 <!-------seccion-Form------>
     <hr>
@@ -142,7 +142,7 @@
         <a class="footer__a" href="#"><img class="footer__item" src="../img/twitter.png" alt="logo de twitter"></a>
         <a class="footer__a" href="#"><img class="footer__item" src="../img/whatsapp.svg" alt="logo de whatsapp"></a>
     </div>
-    <div class="footer__Texto">
+    <div class="footer__texto">
         <p class="footer__p">SpecialTravel 2022-2023 | Diseñado por JDAVILA - Todos los derechos reservados.</p>
     </div>
 </footer>
